--- a/appspec.yml
+++ b/appspec.yml
@@ -5,6 +5,13 @@ files:
     destination: /usr/share/tomcat/webapps
     overwrite: true
 
+permissions:
+  - object: /
+    pattern: "**"
+    mode: 755
+    owner: tomcat
+    group: tomcat
+
 hooks:
   BeforeInstall:
     - location: install.sh
