--- a/appspec.yml
+++ b/appspec.yml
@@ -1,17 +1,17 @@
 version: 0.0
 os: linux
-files:
-  - source: /target/TestProject.war
-    destination: /usr/share/tomcat/webapps
-    overwrite: true
-
-
-permissions:
-  - object: /
-    pattern: "**"
-    mode: 755
-    owner: tomcat
-    group: tomcat
+#files:
+#  - source: /target/TestProject.war
+#    destination: /usr/share/tomcat/webapps
+#    overwrite: true
+#
+#
+#permissions:
+#  - object: /
+#    pattern: "**"
+#    mode: 755
+#    owner: tomcat
+#    group: tomcat
 
 hooks:
   ApplicationStart:
